fixed issues identified by find bugs