@@ -11,6 +11,7 @@
 package org.eclipse.osee.ote.message.elements;
 
 import java.util.Collection;
+
 import org.eclipse.osee.ote.core.environment.interfaces.ITestEnvironmentAccessor;
 import org.eclipse.osee.ote.message.Message;
 import org.eclipse.osee.ote.message.data.HeaderData;
@@ -60,12 +61,12 @@ public class IntegerElement extends NumericElement<Integer> {
 
    @Override
    public Integer getValue() {
-      return new Integer(getMsgData().getMem().getInt(byteOffset, msb, lsb));
+      return Integer.valueOf(getMsgData().getMem().getInt(byteOffset, msb, lsb));
    }
 
    @Override
    public Integer valueOf(MemoryResource mem) {
-      return new Integer(mem.getInt(byteOffset, msb, lsb));
+      return Integer.valueOf(mem.getInt(byteOffset, msb, lsb));
    }
 
    /**
@@ -176,7 +177,7 @@ public class IntegerElement extends NumericElement<Integer> {
     * @throws InterruptedException
     */
    public int waitForRange(ITestEnvironmentAccessor accessor, int minValue, boolean minInclusive, int maxValue, boolean maxInclusive, int milliseconds) throws InterruptedException {
-      return (Integer) super.waitForRange(accessor, new Integer(minValue), minInclusive, new Integer(maxValue),
+      return (Integer) super.waitForRange(accessor, Integer.valueOf(minValue), minInclusive, Integer.valueOf(maxValue),
             maxInclusive, milliseconds);
    }
 
@@ -209,7 +210,7 @@ public class IntegerElement extends NumericElement<Integer> {
     * @throws InterruptedException
     */
    public int waitForNotRange(ITestEnvironmentAccessor accessor, int minValue, boolean minInclusive, int maxValue, boolean maxInclusive, int milliseconds) throws InterruptedException {
-      return (Integer) super.waitForNotRange(accessor, new Integer(minValue), minInclusive, new Integer(maxValue),
+      return (Integer) super.waitForNotRange(accessor, Integer.valueOf(minValue), minInclusive, Integer.valueOf(maxValue),
             maxInclusive, milliseconds);
    }
 
